Fixed icon animation jumping issue

--- a/src/components/Navbars/Navbar.css
+++ b/src/components/Navbars/Navbar.css
@@ -22,8 +22,8 @@
 .icon:hover {
   background-color: rgba(144, 202, 249, 0.531);
   border-radius: 50px;
-  padding: 0.5rem;
-  transition: background-color 0.2s ease-in-out, padding 0.2s ease-in-out;
+  padding: 0 0.5rem;
+  transform: scale(1.3);
 }
 
 .links {
